<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">recuperatorio</string>

    <string name="modificar">Editar Auto</string>

    <string name="editar">EDITAR</string>

    <string name="marca">Marca del auto</string>

    <string name="modelo">Modelo del auto</string>

    <string name="anio">Año: </string>

    <string-array name="spinner_array">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2016</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

</resources>