<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marca"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editar_marca"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/modelo"
        android:textSize="18sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editar_modelo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/anio"
            android:layout_gravity="center" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D6D6D6"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/app_name" />


    </LinearLayout>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/editar"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        app:backgroundTint="#D6D6D6" />


</LinearLayout>